# ev3devKit

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  demo.sublime-project  demo.sublime-workspace  ev3dev-test.vala  ev3devkit-desktop.pc.in  ev3devkit.pc.in  ev3devkitConfig.cmake.in  fix-desktop-gir.sh  fix-gir.sh  fix-vapi.sh  index.html  main_window_glade.cmake  nuke.sh  release-doc.sh  setup.cmake
bindings/: GRX.vapi  glib-extra.vapi  grx.vapi  linux-extra.vapi  u8g.vapi
cmake/: FindValadoc.cmake
data/: CMakeLists.txt  bluetooth-connected16x16.pbm  bluetooth-connected7x9.pbm  bluetooth.pbm  bluetooth12x12.pbm  bluetooth16x16.pbm  bluetooth7x9.pbm  ethernet.pbm  ethernet12x12.pbm  lock5x6.pbm  lock7x9.pbm  pnmtopng.cmake  usb.pbm  usb12x12.pbm  usb7x9.pbm  wifi-idle12x9.pbm  wifi-idle16x16.pbm  wifi.pbm  wifi12x12.pbm  wifi12x9.pbm  wifi16x16.pbm  wps9x9.pbm
debian/: changelog  control  copyright  ev3devkit-data.install  ev3devkit-demo.install  ev3devkit-desktop-demo.install  gbp.conf  gir1.2-ev3devkit-0.1.install  gir1.2-ev3devkit-0.3.install  gir1.2-ev3devkit-0.4.install  gir1.2-ev3devkit-0.5.install  gir1.2-ev3devkit-desktop-0.1.install  gir1.2-ev3devkit-desktop-0.3.install  gir1.2-ev3devkit-desktop-0.4.install  libev3devkit-0.1-0.install  libev3devkit-0.1-0.symbols  libev3devkit-0.3-0.install  libev3devkit-0.3-0.symbols  libev3devkit-0.4-0.install  libev3devkit-0.4-0.symbols  libev3devkit-0.5-0.install  libev3devkit-0.5-0.symbols  libev3devkit-desktop-0.1-0.install  libev3devkit-desktop-0.1-0.symbols  libev3devkit-desktop-0.3-0.install  libev3devkit-desktop-0.3-0.symbols  libev3devkit-desktop-0.4-0.install  libev3devkit-desktop-0.4-0.symbols  libev3devkit-desktop-dev.install  libev3devkit-dev.install  release.sh  rules
demo/: Demo.vala  DemoWindow.vala  UIDemoWindow.vala  UiDemoWindow.vala  devices_demo.vala  main.vala  ui_demo.vala  ui_desktop_demo.vala
desktop-demo/: main.vala
docker/: armel.dockerfile  armhf.dockerfile  setup.sh
ev3devKit/: EV3devKit.Box.Box.horizontal.html  EV3devKit.Box.Box.vertical.html  EV3devKit.Box.direction.html  EV3devKit.Box.do_layout.html  EV3devKit.Box.get_preferred_height.html  EV3devKit.Box.get_preferred_height_for_width.html  EV3devKit.Box.get_preferred_width.html  EV3devKit.Box.get_preferred_width_for_height.html  EV3devKit.Box.html  EV3devKit.Box.spacing.html  EV3devKit.BoxDirection.HORIZONTAL.html  EV3devKit.BoxDirection.VERTICAL.html  EV3devKit.BoxDirection.html  EV3devKit.Button.Button.html  EV3devKit.Button.Button.with_label.html  EV3devKit.Button.draw_background.html  EV3devKit.Button.draw_children_as_focused.html  EV3devKit.Button.html  EV3devKit.Button.key_pressed.html  EV3devKit.Button.pressed.html  EV3devKit.CheckButton.CheckButton.checkbox.html  EV3devKit.CheckButton.CheckButton.radio.html  EV3devKit.CheckButton.checked.html  EV3devKit.CheckButton.draw_content.html  EV3devKit.CheckButton.get_preferred_height.html  EV3devKit.CheckButton.get_preferred_width.html  EV3devKit.CheckButton.group.html  EV3devKit.CheckButton.html  EV3devKit.CheckButton.inner_size.html  EV3devKit.CheckButton.key_pressed.html  EV3devKit.CheckButton.outer_size.html  EV3devKit.CheckButtonGroup.CheckButtonGroup.html  EV3devKit.CheckButtonGroup.html  EV3devKit.CheckButtonGroup.selected_item.html  EV3devKit.CheckButtonType.CHECKBOX.html  EV3devKit.CheckButtonType.RADIO.html  EV3devKit.CheckButtonType.html  EV3devKit.CheckboxMenuItem.CheckboxMenuItem.html  EV3devKit.CheckboxMenuItem.checkbox.html  EV3devKit.CheckboxMenuItem.html  (+1601 more)
ev3devKit-demo/: EV3devKit.Box.Box.horizontal.html  EV3devKit.Box.Box.vertical.html  EV3devKit.Box.direction.html  EV3devKit.Box.do_layout.html  EV3devKit.Box.get_preferred_height.html  EV3devKit.Box.get_preferred_height_for_width.html  EV3devKit.Box.get_preferred_width.html  EV3devKit.Box.get_preferred_width_for_height.html  EV3devKit.Box.html  EV3devKit.Box.spacing.html  EV3devKit.BoxDirection.HORIZONTAL.html  EV3devKit.BoxDirection.VERTICAL.html  EV3devKit.BoxDirection.html  EV3devKit.Button.Button.html  EV3devKit.Button.Button.with_label.html  EV3devKit.Button.draw_children_as_focused.html  EV3devKit.Button.html  EV3devKit.Button.key_pressed.html  EV3devKit.Button.pressed.html  EV3devKit.CheckButton.CheckButton.checkbox.html  EV3devKit.CheckButton.CheckButton.radio.html  EV3devKit.CheckButton.checked.html  EV3devKit.CheckButton.get_preferred_height.html  EV3devKit.CheckButton.get_preferred_width.html  EV3devKit.CheckButton.group.html  EV3devKit.CheckButton.html  EV3devKit.CheckButton.inner_size.html  EV3devKit.CheckButton.outer_size.html  EV3devKit.CheckButtonGroup.CheckButtonGroup.html  EV3devKit.CheckButtonGroup.html  EV3devKit.CheckButtonGroup.selected_item.html  EV3devKit.CheckButtonType.CHECKBOX.html  EV3devKit.CheckButtonType.RADIO.html  EV3devKit.CheckButtonType.html  EV3devKit.CheckboxMenuItem.CheckboxMenuItem.html  EV3devKit.CheckboxMenuItem.checkbox.html  EV3devKit.CheckboxMenuItem.html  EV3devKit.Container.add.html  EV3devKit.Container.child.html  EV3devKit.Container.child_added.html  (+1104 more)
ev3devkit/: EV3devKit.ConsoleApp.ConsoleAppError.MODE.html  EV3devKit.ConsoleApp.ConsoleAppError.html  EV3devKit.ConsoleApp.html  EV3devKit.ConsoleApp.ignore_next_key_press.html  EV3devKit.ConsoleApp.init.html  EV3devKit.ConsoleApp.quit.html  EV3devKit.ConsoleApp.run.html  EV3devKit.Devices.DCMotor.commands.html  EV3devKit.Devices.DCMotor.driver_name.html  EV3devKit.Devices.DCMotor.duty_cycle.html  EV3devKit.Devices.DCMotor.duty_cycle_sp.html  EV3devKit.Devices.DCMotor.html  EV3devKit.Devices.DCMotor.polarity.html  EV3devKit.Devices.DCMotor.port_name.html  EV3devKit.Devices.DCMotor.ramp_down_ms.html  EV3devKit.Devices.DCMotor.ramp_down_sp.html  EV3devKit.Devices.DCMotor.ramp_up_ms.html  EV3devKit.Devices.DCMotor.ramp_up_sp.html  EV3devKit.Devices.DCMotor.send_command.html  EV3devKit.Devices.DCMotor.set_duty_cycle_sp.html  EV3devKit.Devices.DCMotor.set_stop_command.html  EV3devKit.Devices.DCMotor.set_time_sp.html  EV3devKit.Devices.DCMotor.state.html  EV3devKit.Devices.DCMotor.stop_commands.html  (+1783 more)
src/: Box.vala  (+41 more)
(+212 files in other folders)
